--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="icon" type="image/png" href="./src/assets/images/logoSemBackground.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Taberna do dragão</title>
   </head>
   <body>
     <div id="root"></div>
